--- a/Netrogue/Netrogue/Netrogue.csproj
+++ b/Netrogue/Netrogue/Netrogue.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Raylib-CSharp-Vinculum" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
