--- a/Netrogue/Netrogue/Netrogue.csproj
+++ b/Netrogue/Netrogue/Netrogue.csproj
@@ -16,6 +16,12 @@
     <None Update="mapfile.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="RoguePics\Floor.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="RoguePics\Humanoid1.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
