--- a/Netrogue/Netrogue/Netrogue.csproj
+++ b/Netrogue/Netrogue/Netrogue.csproj
@@ -22,6 +22,9 @@
     <None Update="RoguePics\Humanoid1.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="RoguePics\tilemap_packed.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
