--- a/Netrogue/Netrogue/Netrogue.csproj
+++ b/Netrogue/Netrogue/Netrogue.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -13,8 +13,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\..\OneDrive - Business College Helsinki\Desktop\tiledmapreader\TurboMapReader\TurboMapReader.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="mapfile.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="RogueMap.tmj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="RoguePics\Floor.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
