Ai halfway update of wandering

--- a/Netrogue/Netrogue/Netrogue.csproj
+++ b/Netrogue/Netrogue/Netrogue.csproj
@@ -17,6 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="LevelMusic\BeatTrack45.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="RogueMap.tmj">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
